--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Search</title>
   </head>
   <body>
     <form class="search-form" id="search-form">
@@ -18,22 +18,10 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <div class="photo-card">
-      <img src="" alt="" loading="lazy" />
-      <div class="info">
-        <p class="info-item">
-          <b>Likes</b>
-        </p>
-        <p class="info-item">
-          <b>Views</b>
-        </p>
-        <p class="info-item">
-          <b>Comments</b>
-        </p>
-        <p class="info-item">
-          <b>Downloads</b>
-        </p>
-      </div>
-    </div>
+    <p class="text">
+      We're sorry, but you've reached the end of search results.
+    </p>
+    <span class="loader"></span>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
